Review comments fix